--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@ body {
 
 .navbar {
     background: #ffffff;
-    /* margin-top: 10px; */
     border-bottom: 3px solid #dddddd;
     margin-bottom: 30px;
     padding-top: 0px;
@@ -72,9 +71,14 @@ h2 {
     font-family: 'Times New Roman', Times, serif;
     text-align: center;
     padding: 15px;
-    width: 204px;
+    width: 100%;
     margin-bottom: 20px;
-    
-    
+    position: relative;
+    bottom: 60px;
 
+}
+
+.work {
+    width: 100%;
+    height: 300px;
 }
