--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ h1 {
     background: #666666;
     color: #ffffff;
     border-top: 8px solid #4aaaa5;
-    margin-top: 80px;
+    margin-top: 400px;
 }
 
 #content {
@@ -65,7 +65,8 @@ h1 {
 }
 
 h2 {
-    font-size: 16px;
+    font-size: 24px;
+    font-weight: bold;
     color: #ffffff;
     background: #4aaaa5;
     font-family: 'Times New Roman', Times, serif;
@@ -74,7 +75,7 @@ h2 {
     width: 100%;
     margin-bottom: 20px;
     position: relative;
-    bottom: 60px;
+    bottom: 65px;
 
 }
 
