--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ body {
 
 .main-content {
     border: 1px solid #dddddd;
+    
 
 }
 
@@ -57,11 +58,11 @@ h1 {
     background: #666666;
     color: #ffffff;
     border-top: 8px solid #4aaaa5;
-    margin-top: 400px;
+    /* margin-top: 600px; */
 }
 
 #content {
-    margin-bottom: 200px;
+    margin-bottom: 400px;
 }
 
 h2 {
