--- a/style.css
+++ b/style.css
@@ -84,3 +84,11 @@ h2 {
     width: 100%;
     height: 300px;
 }
+
+.btn {
+    background: #4aaaa5;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #ffffff;
+    margin-bottom: 20px;
+    
+}
